# mahalaxmi

./: .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md
crates/mahalaxmi-cli/: Cargo.toml
crates/mahalaxmi-cli/src/: main.rs
crates/mahalaxmi-core/: Cargo.toml
crates/mahalaxmi-core/locales/ar-SA/: core.ftl
crates/mahalaxmi-core/locales/de-DE/: core.ftl
crates/mahalaxmi-core/locales/en-US/: core.ftl
crates/mahalaxmi-core/locales/es-ES/: core.ftl
crates/mahalaxmi-core/locales/fr-FR/: core.ftl
crates/mahalaxmi-core/locales/hi-IN/: core.ftl
crates/mahalaxmi-core/locales/ja-JP/: core.ftl
crates/mahalaxmi-core/locales/ko-KR/: core.ftl
crates/mahalaxmi-core/locales/pt-BR/: core.ftl
crates/mahalaxmi-core/locales/zh-CN/: core.ftl
crates/mahalaxmi-core/src/: developer.rs  error.rs  lib.rs  singleton.rs  user_message.rs
crates/mahalaxmi-core/src/config/: loader.rs  mod.rs
crates/mahalaxmi-core/src/i18n/: locale.rs  messages.rs  mod.rs  service.rs
crates/mahalaxmi-core/src/logging/: mod.rs  spans.rs
crates/mahalaxmi-core/src/security/: encryption.rs  mod.rs
crates/mahalaxmi-core/src/types/: detection.rs  developer.rs  enums.rs  ids.rs  mod.rs  orchestration.rs  process.rs  templates.rs  terminal.rs
crates/mahalaxmi-core/tests/: config_tests.rs  error_tests.rs  example_api_tests.rs  foundation_test.rs  i18n_tests.rs  logging_tests.rs  orchestration_types_tests.rs  template_types_tests.rs  types_tests.rs
crates/mahalaxmi-detection/: Cargo.toml
crates/mahalaxmi-detection/src/: lib.rs  matcher.rs  pattern.rs  result.rs  rule.rs  rule_set.rs
crates/mahalaxmi-detection/src/errors/: analysis.rs  cluster.rs  hypothesis.rs  mod.rs  recurring.rs
crates/mahalaxmi-detection/src/verification/: lint_parser.rs  mod.rs  test_parser.rs
crates/mahalaxmi-detection/tests/: error_analysis_tests.rs  example_api_tests.rs  matcher_tests.rs  pattern_tests.rs
crates/mahalaxmi-indexing/: Cargo.toml
crates/mahalaxmi-indexing/src/: graph.rs  index.rs  lib.rs  ranking.rs  repomap.rs
crates/mahalaxmi-indexing/src/extractors/: c_extractor.rs  cpp_extractor.rs  go_extractor.rs  java_extractor.rs  mod.rs  python_extractor.rs  rust_extractor.rs  typescript_extractor.rs
crates/mahalaxmi-indexing/src/languages/: config.rs  extractor.rs  mod.rs  registry.rs
crates/mahalaxmi-indexing/src/types/: confidence.rs  fingerprint.rs  language.rs  mod.rs  symbol.rs
crates/mahalaxmi-indexing/tests/: example_api_tests.rs  extractor_tests.rs  graph_tests.rs  language_registry_tests.rs  pipeline_tests.rs  ranking_tests.rs
crates/mahalaxmi-memory/: Cargo.toml
crates/mahalaxmi-memory/src/: decay.rs  entry.rs  injector.rs  lib.rs  query.rs  sqlite.rs  store.rs  sync.rs
crates/mahalaxmi-memory/src/persistence/: file.rs  mod.rs  traits.rs
crates/mahalaxmi-memory/src/types/: confidence.rs  memory_type.rs  mod.rs  source.rs
crates/mahalaxmi-memory/tests/: entry_tests.rs  injector_tests.rs  persistence_tests.rs  query_tests.rs  store_tests.rs  types_tests.rs
crates/mahalaxmi-orchestration/: Cargo.toml
crates/mahalaxmi-orchestration/src/: agent.rs  carry_forward.rs  circuit_breaker.rs  classifier.rs  dag.rs  diff_scan.rs  error.rs  lib.rs  monitor.rs  plan_hash.rs  queue.rs  service.rs  state_machine.rs  verification.rs  worktree.rs
crates/mahalaxmi-orchestration/src/consensus/: arbitrator.rs  complexity.rs  engine.rs  intersection.rs  mod.rs  normalizer.rs  similarity.rs  strategy.rs  union.rs  weighted.rs
crates/mahalaxmi-orchestration/src/context/: budget.rs  builder.rs  chunker.rs  graph_proximity.rs  historical.rs  lexical.rs  mod.rs  relevance.rs  router.rs
crates/mahalaxmi-orchestration/src/deliberation/: api_client.rs  cross_team.rs  discovery.rs  gate.rs  mod.rs  team.rs
crates/mahalaxmi-orchestration/src/models/: consensus.rs  events.rs  mod.rs  plan.rs  proposal.rs  queue.rs  report.rs  review.rs  validation.rs  worker.rs
crates/mahalaxmi-orchestration/src/modes/: mod.rs  precise.rs  review.rs
crates/mahalaxmi-orchestration/src/prompt/: builder.rs  mod.rs  normalizer.rs  parser.rs  review_builder.rs  validator_builder.rs  worker_builder.rs
crates/mahalaxmi-orchestration/tests/: agent_tests.rs  consensus_tests.rs  context_budget_tests.rs  context_builder_tests.rs  context_chunker_tests.rs  context_degradation_tests.rs  context_queue_tests.rs  context_relevance_tests.rs  converter_tests.rs  dag_tests.rs  example_api_tests.rs  models_tests.rs  monitor_tests.rs  prompt_tests.rs  queue_tests.rs  queue_verification_tests.rs  report_tests.rs  review_tests.rs  self_healing_tests.rs  service_tests.rs  state_machine_tests.rs  team_consensus.rs  validation_tests.rs  verification_pipeline_tests.rs  worker_prompt_tests.rs  worktree_tests.rs
crates/mahalaxmi-providers/: Cargo.toml
crates/mahalaxmi-providers/src/: aider.rs  bedrock.rs  chatgpt.rs  claude.rs  copilot.rs  cost.rs  credential_store.rs  credentials.rs  custom_cli.rs  gemini.rs  generic.rs  grok.rs  handoff.rs  lib.rs  markers.rs  metadata.rs  metrics.rs  mock.rs  ollama.rs  registry.rs  resilience.rs  router.rs  security.rs  tier1.rs  traits.rs  types.rs
crates/mahalaxmi-providers/tests/: capability_tests.rs  circuit_breaker_consistency_tests.rs  credential_store_tests.rs  example_api_tests.rs  gemini_provider_tests.rs  handoff_tests.rs  metrics_tests.rs  provider_defaults_tests.rs  provider_markers_tests.rs  provider_metadata_complete_tests.rs  provider_registry_complete_tests.rs  provider_spawn_tests.rs  provider_streaming_tests.rs  provider_tests.rs  resilience_tests.rs  router_tests.rs  routing_strategy_tests.rs  security_tests.rs  tier1_tests.rs
crates/mahalaxmi-pty/: Cargo.toml
crates/mahalaxmi-pty/src/: buffer.rs  events.rs  lib.rs  reader.rs  session.rs  spawner.rs  terminal.rs  vt_cleaner.rs
crates/mahalaxmi-pty/tests/: buffer_tests.rs  pty_tests.rs  reader_tests.rs  session_api_tests.rs  vt_cleaner_tests.rs
docs/: testing.md  (+4 more)
integration-tests/: Cargo.toml
integration-tests/tests/: e2e_scenarios.rs
(+251 files in other folders)
