[package]
name = "mahalaxmi-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[test]]
name = "e2e_scenarios"
path = "tests/e2e_scenarios.rs"

[dev-dependencies]
mahalaxmi-core = { path = "../crates/mahalaxmi-core" }
mahalaxmi-detection = { path = "../crates/mahalaxmi-detection" }
mahalaxmi-orchestration = { path = "../crates/mahalaxmi-orchestration" }
mahalaxmi-providers = { path = "../crates/mahalaxmi-providers" }
mahalaxmi-indexing = { path = "../crates/mahalaxmi-indexing" }
tokio = { workspace = true }
