[package]
name = "mahalaxmi-cli"
version = "100.0.0"
edition = "2021"

[[bin]]
name = "mahalaxmi-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures-util = "0.3"
