[package]
name = "mahalaxmi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared domain types, traits, and errors for Mahalaxmi"

[dependencies]
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = { workspace = true }
rand_core = { version = "0.9", features = ["std"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = "1.0"
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
dirs = "5"
tracing-appender = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
