[package]
name = "mahalaxmi-detection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "State detection and auto-response for Mahalaxmi"

[dependencies]
mahalaxmi-core = { path = "../mahalaxmi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
