[package]
name = "mahalaxmi-indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Codebase indexing, symbol extraction, and repo map generation for Mahalaxmi"

[dependencies]
mahalaxmi-core = { path = "../mahalaxmi-core" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
