[package]
name = "mahalaxmi-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-agent shared memory for Mahalaxmi"

[dependencies]
mahalaxmi-core = { path = "../mahalaxmi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3"
