[package]
name = "mahalaxmi-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI provider abstraction layer for Mahalaxmi"

[dependencies]

mahalaxmi-core = { path = "../mahalaxmi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
regex = { workspace = true }
keyring = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
