[package]
name = "mahalaxmi-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PTY terminal management for Mahalaxmi"

[dependencies]
mahalaxmi-core = { path = "../mahalaxmi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
portable-pty = { workspace = true }
vte = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mahalaxmi-core = { path = "../mahalaxmi-core" }
